--- a/app/views/active/index1.html.erb
+++ b/app/views/active/index1.html.erb
@@ -11,7 +11,6 @@
 
             <div class="map_wrap">
               
-              
             <div id="map"></div>
       
               <!--즐찾버튼-->
@@ -35,9 +34,10 @@
 
             <h5>이 알바는 어때요? ver1.1.6</h5>
             
-            <div style="float:right;">
-            <button id="day_payment" class="btn_sort2"><i class="far fa-check-square"></i> 당일지급</button> <!-- 클릭시 클래스 추가  sort2_on -->
+            <div class="sort">
             <button id="street_order" class="btn_sort sort_on">거리순</button><button id="newest" class="btn_sort">최신순</button><button id="price" class="btn_sort">가격순</button>
+            <button id="day_payment" class="btn_sort2">당일지급</button> <!-- 클릭시 클래스 추가  sort2_on -->
+            
             </div>           
             
             <ul class="work_list"></ul>
