--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,40 +2,32 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Cache-Control" content="no-cache" />
-    <meta HTTP-EQUIV="Pragma" CONTENT="no-cache">
-    <meta HTTP-EQUIV="Expires" CONTENT="-1">
-  
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="-1">
 
-
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-analytics.js"></script>
-    
     <script src="https://sdk.accountkit.com/en_US/sdk.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
-    <script src="https://kit.fontawesome.com/9f48ba518c.js"></script>
-     
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
-    
-        
+
+    <!-- version 1.1.6 // 2019-11-30 -->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
-    
-    <!-- version 1.1.6 // 2019-11-30 -->
-    
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
+  
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
    
+   
+    <script src="https://kit.fontawesome.com/9f48ba518c.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     
     
     <!-- ax5ui -->
@@ -63,11 +55,11 @@
       <% if current_user.usertype =='0' %> <!--알바일때-->
           <div id="menu">
               <ul>
-                  <li id="menu_active">1</li>
-                  <li id="menu_favorites">2</li>
-                  <li id="menu_application">3</li>
-                  <li id="menu_alram">4</li>
-                  <li id="menu_mypage">5</li>
+                  <li id="menu_active"></li>
+                  <li id="menu_favorites"></li>
+                  <li id="menu_application"></li>
+                  <li id="menu_alram"></li>
+                  <li id="menu_mypage"></li>
               </ul>
         </div>
       <% end %>
