--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -295,7 +295,7 @@ float:left;background:#fff;margin-left:5px;}
 .work_list {
   position: relative;
   padding: 0;
-  margin: 10px 0 0 0;
+  margin: 10px 0 50px 0;
   display: inline-block;
   *display: inline; }
 
