--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -272,8 +272,8 @@ box-shadow:0px 3px 5px rgba(0,0,0,0.3);}
 
 
 /*이 알바는 어때요*/
-.recm {background:#fff;padding:25px !important;box-shadow:0px 0px 5px rgba(0,0,0,0.3)}
-.recm h5 {display:inline-block;*display:inline;float:left;padding:0;margin:0;}
+.recm {background:#fff;padding:25px !important;box-shadow:0px 0px 10px rgba(0,0,0,0.3)}
+.recm h5 {display:inline-block;*display:inline;float:left;padding:0;margin:0;font-size:16px !important;}
 .recm h5.btn_mainlist {float:right !important;}
 
 
@@ -284,7 +284,7 @@ box-shadow:0px 3px 5px rgba(0,0,0,0.3);}
 
 
 /*정렬버튼 - 거리순, 가격순, 최신순*/
-.sort {position:relative;width:100%;margin:10px 0 0 0}
+.sort {position:relative;width:100%;margin:15px 0 0 0}
 button.btn_sort {border:1px solid #dfdfdf;color:#888;padding:7px 10px;font-weight: 400;margin:0;float:left;background:#fff;} 
 #street_order {border-right:0;border-top-left-radius:2px;border-bottom-left-radius:2px;} 
 #newest {border-left:0;border-right:0;} 
@@ -300,32 +300,35 @@ button.sort_on {color:#97d3d4;font-weight:bold;}
 .work_list {
   position: relative;
   padding: 0;
-  margin: 10px 0 50px 0;
+  margin: 0;
   display: inline-block;
   *display: inline; }
 
 .work_list > li {
   position: relative;
-  padding: 15px;
+  padding: 25px 0;
   margin: 0;
   width: 100%;
   list-style: none;
-  border: 1px solid #82d7d2;
+  /*border: 1px solid #82d7d2;
   border-radius: 5px;
   box-shadow: 3px 3px 3px #ddf4f3;
-  margin-bottom: 15px; }
+  margin-bottom: 15px; 
+  */
+  
+  border-bottom:1px solid #ddd;
+  
+}
 
 .work_list > li:hover {
   cursor: pointer;
-  box-shadow: 3px 3px 3px #cde9e8;
-  background: #f1fffe; }
+  /*box-shadow: 3px 3px 3px #cde9e8;
+  background: #f1fffe;*/}
 
 .work_list > li section {
   position: relative;
   float: left;
-  width: 100%;
-  border-bottom: 1px solid #ddd;
-  padding-bottom: 10px; }
+  width: 100%;}
 
 .work_list .img {
   position: relative;
@@ -350,7 +353,7 @@ button.sort_on {color:#97d3d4;font-weight:bold;}
   padding: 5px 0 0 15px; }
 
 .work_list .info .title {
-  font-size: 13pt;
+  font-size: 15pt;
   font-weight: 500;
   width: 100%;
   margin-bottom: 2px; }
@@ -376,12 +379,16 @@ button.sort_on {color:#97d3d4;font-weight:bold;}
 a.tag {color:#40ada7;padding:0 3px;}    
 a.tag:hover {background:#e9f7ff;border-radius:3px;}    
 
-.work_list .info2 {position:relative;width:calc(100% - 75px);padding:10px 0 0 0;margin:0 0 0 5px;}
-.work_list .info2 li {padding:0 0 0 25px;margin:0;width:100%;
+.work_list .info2 {position:relative;float:right;width:calc(100% - 75px);padding:0;margin:0 0 0 5px;}
+.work_list .info2 li {padding:0 0 3px 0;margin:0;width:100%;
 list-style:none;display:inline-block;*display:inline;color:#8a8a8a;font-size:10pt;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}
+/*
 .work_list .info2 li:first-child {background:url('/img/icon_cal.png') no-repeat left center;background-size:15px auto;}
 .work_list .info2 li:nth-child(2) {background:url('/img/icon_time.png') no-repeat left center;background-size:15px auto;}
 .work_list .info2 li:nth-child(3) {background:url('/img/icon_pay.png') no-repeat left center;background-size:15px auto;}
+*/
+
+
 
 .work_list .fa-star {z-index:999;}
 
@@ -395,12 +402,16 @@ span.icon-blue {background:#004eb7;color:#fff;font-size:8.5pt;border-radius:8px;
 .icon_fav {position:absolute;top:0px;right:5px;}
 .icon_fav i {color:#b0b0b0;}
 
-.btn_apply {position:absolute;bottom:15px;right:15px;background:linear-gradient( to right, #82d7d2, #77c2ec);color:#fff !important;font-size:12pt;
-font-weight:500;padding:10px 20px 10px 30px;border-radius:50px;}
+.btn_apply {position:relative;width:calc(100% - 75px);float:right;
+border-radius:5px;background:linear-gradient( to right, #82d7d2, #77c2ec);color:#fff !important;font-size:12pt;
+font-weight:500;padding:10px 20px 10px 30px;margin-top:10px;text-align:center;}
 .btn_apply i {margin-left:10px;}
 
 #graybar {position:relative;width:100%;float:left;background:#f9f9f9;height:8px}
 
+
+
+.work_list .info2  b {color:#000 !important;}
 
 
 /*업체정보*/
