--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -106,7 +106,7 @@ a.btn_bd_gray {color:#8a8a8a;}
 #top_title2 i {margin-right:10px;}
 #top_title2 i:hover {cursor:pointer;}
 
-#wrap {position:relative;width:100%;max-width:500px;margin:0 auto;background:#fff;text-align:left;overflow:hidden;}
+#wrap {position:relative;width:100%;max-width:500px;margin:0 auto;background:#fff;text-align:left;overflow-y:scroll;}
 .info {font-size:10pt;}
 
 
@@ -277,7 +277,7 @@ box-shadow:0px 3px 5px rgba(0,0,0,0.3);}
 .recm h5.btn_mainlist {float:right !important;}
 
 
-.abs {position:absolute !important;width:100%;height:600px;left:0;bottom:0;border-radius:15px;}
+.abs {position:absolute !important;width:100%;height:auto;left:0;top:300px;border-radius:15px;min-height:500px;}
 
 .recm .fa-sort-amount-down {float:right;font-size:12pt;color:#b0b0b0;margin-top:8px;}
 
@@ -325,11 +325,6 @@ button.sort_on {color:#97d3d4;font-weight:bold;}
   /*box-shadow: 3px 3px 3px #cde9e8;
   background: #f1fffe;*/}
 
-.work_list > li section {
-  position: relative;
-  float: left;
-  width: 100%;}
-
 .work_list .img {
   position: relative;
   float: left;
@@ -350,31 +345,44 @@ button.sort_on {color:#97d3d4;font-weight:bold;}
   float: left;
   width:calc(100% - 60px);
   max-width: 300px;
-  padding: 5px 0 0 15px; }
+  padding: 5px 0 0 15px;}
 
 .work_list .info .title {
   font-size: 15pt;
   font-weight: 500;
   width: 100%;
-  margin-bottom: 2px; }
+  letter-spacing:-0.5pt;
+  
+}
 
 .work_list .info .title span {
-  margin-left: 8px;
   font-weight: 400;
   font-size: 10pt;
-  color: #8a8a8a; }
+  color: #8a8a8a; 
+}
 
-.work_list .info .title span.loc:before {
-  position: absolute;
-  content: "|";
-  left: 0;
-  top: -1px; }
+.work_list .info .title .loc:before {
+  width: 3px;
+  height: 3px;
+  border-radius: 33px;
+  background-color: #a3a3a3;
+  content:" ";
+  display:block;
+  position:absolute;
+  top:5px;
+  left:0;
+  }
 
-.work_list .info .title span.loc {
+.work_list .info .title .loc {
   position: relative;
-  background: url("/img/icon_location.png") 12px center no-repeat;
+  top:-2px;
+  padding-left:10px;
+   font-weight: 400;
+  font-size: 10pt;
+  color: #8a8a8a; 
+  /*background: url("/img/icon_location.png") 12px center no-repeat;
   background-size: 10px auto;
-  padding-left: 27px; }
+  padding-left: 27px;*/}
 
 a.tag {color:#40ada7;padding:0 3px;}    
 a.tag:hover {background:#e9f7ff;border-radius:3px;}    
@@ -388,7 +396,7 @@ list-style:none;display:inline-block;*display:inline;color:#8a8a8a;font-size:10p
 .work_list .info2 li:nth-child(3) {background:url('/img/icon_pay.png') no-repeat left center;background-size:15px auto;}
 */
 
-
+.work_list .info2 li:nth-child(2) {color:#000;font-size:12pt;font-weight:600;}
 
 .work_list .fa-star {z-index:999;}
 
