--- a/app/views/bussiness/index.html.erb
+++ b/app/views/bussiness/index.html.erb
@@ -60,7 +60,15 @@
               
 
               <div class="btn_area">
-              <span id="location"><i class="fas fa-plus"></i>사업장 추가</span>
+                  <i class="fas fa-ellipsis-v btn_setting"></i>
+                  
+                  <ul class="settingmenu">
+                    <li>사업장 변경</li>
+                    <li><span id="location">사업장 추가</span></li>
+                  </ul>
+                  
+                  
+              
               </div>
             </div>
             
