--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -191,14 +191,16 @@ border:0;border-radius:3px;padding-left:30px;margin:0 auto 10px auto;color:#fff;
         padding: 0;
       }
       
-      .map_wrap {position:relative;width:100%;disply:inline-block;*display:inline;}
+      .map_wrap {position:relative;width:100%;display:inline-block;*display:inline;}
       
       #menu_wrap {
-        z-index: 1000;
         position:absolute;
+        left:0;
         top:0;
-        margin-left: 450px;
+        width:100%;
+        margin-left: 0px;
         margin-top: 10px;
+        z-index: 1000;
       }
       
       .favorites {
@@ -515,10 +517,15 @@ ul.tabs li.active div {background:#82d7d2;}
 
 .btn_modify {border:0;position:absolute;right:20px;top:40px;width:30px;height:30px;background:url('/img/icon_setting.png') no-repeat center center; background-size:30px auto;}
 
-#profile .btn_area {position:absolute;top:0;right:0;}
-#profile .btn_area span {border:1px solid #fff;border-radius:10px;}
+#profile .btn_area {position:absolute;right:0;top:0;}
 
+.btn_setting {position:absolute;right:20px;top:25px;}
 
+.settingmenu {position:absolute;right:10px;top:45px;width:100px;background:#fff;
+display:inline-block;*display:inline;padding:5px 8px;margin:0;display:none;
+box-shadow:3px 3px 5px rgba(0,0,0,0.2);border:1px solid #ddd;}
+.settingmenu li {width:100%;list-style:none;padding:5px 0;margin:0;color:#999;text-align:center;border-bottom:1px solid #eaeaea;}
+.settingmenu li:last-child {border-bottom:0;}
 
 /*메뉴리스트 */
 
@@ -541,8 +548,9 @@ ul.tabs li.active div {background:#82d7d2;}
 #create_job {border-radius:5px;background:#004eb7;width:100%;height:50px;line-height:50px;border:0;color:#fff;font-weight:500;font-size:12pt;margin-top:10px;}
 #create_job i {margin-right:10px;}
 
-.bs_profile .fas.fa-chevron-down {background:rgba(255,255,255,0.2);width:25px;height:25px;
-padding:3px;text-align:center;border-radius:50px !important}
+.bs_profile .fas.fa-chevron-down {
+text-align:center;
+bord}
 
 /*업주 - 공고 상세보기 */
 .ap_wrap {position:relative;width:100%;background:#f7f7f7;text-align:center;}
