--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -550,7 +550,7 @@ box-shadow:3px 3px 5px rgba(0,0,0,0.2);border:1px solid #ddd;}
 
 .bs_profile .fas.fa-chevron-down {
 text-align:center;
-bord}
+}
 
 /*업주 - 공고 상세보기 */
 .ap_wrap {position:relative;width:100%;background:#f7f7f7;text-align:center;}
